--- a/index.html
+++ b/index.html
@@ -335,19 +335,11 @@
               </p>
             </div>
           </div>
-          <div class="swiper-button-next hidden ms-10 box-border after:hidden">
-            <img
-              src="./imge/icons8-previous-24.png"
-              class="bg-slate-50 w-[100px]"
-              alt=""
-            />
+          <div class="swiper-button-next">
+           
           </div>
-          <div class="swiper-button-prev after:hidden">
-            <img
-              src="./imge/icons8-next-24.png"
-              class="bg-slate-50 w-[100px]"
-              alt=""
-            />
+          <div class="swiper-button-prev">
+           
           </div>
         </div>
       </div>
@@ -381,7 +373,7 @@
       </div>
     </div>
 
-    <div class="w-[100%] bg-[url('/imge/20.webp')] bg-cover pt-[80px] pb-20">
+    <div class="w-[100%] bg-[#280306]  pt-[80px] pb-20">
       <div>
         <h2 class="font-body text-white font-bold text-center">
           سینما آنلاین فیلیمو
